--- a/generators/app/templates/Dockerfile
+++ b/generators/app/templates/Dockerfile
@@ -2,9 +2,7 @@ FROM docker.itpservices.be/itp/node6-native-alpine
 
 ADD . .
 
-# Install modules & move them to the root (avoids them being overwritten when
-# mounting a volume)
-RUN npm install && mv node_modules /node_modules
+RUN npm install
 
 ENV PORT 80
 
