choice of native or not image

--- a/generators/app/templates/Dockerfile
+++ b/generators/app/templates/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.itpservices.be/itp/node6-native-alpine
+FROM docker.itpservices.be/itp/node6-<% if (nativeDocker) { %>native-<% } %>alpine
 
 ADD . .
 
