PR feedback for the docker

--- a/generators/app/templates/docker-compose.yml
+++ b/generators/app/templates/docker-compose.yml
@@ -4,15 +4,14 @@ services:
   api:
     build:
       context: .
-      dockerfile: Dockerfile
-    network_mode: bridge
     volumes:
       - ./:/app
     ports:
-      - 3000:80
+      - 80
     links:
+      - mongo
+    depends_on:
       - mongo
 
   mongo:
     image: mongo
-    network_mode: bridge
