--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "generators"
   ],
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator",
+    "project-generator",
+    "express",
+    "itp",
+    "node.js",
+    "api"
   ],
   "dependencies": {
     "chalk": "~1.1.0",
