--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "scripts": {
     "test": "mocha",
-    "lint": "eslint . || exit 0"
+    "lint": "eslint . || exit 0",
+    "lint-checkstyle": "eslint -f checkstyle . > ./test/checkstyle-result.xml || exit 0",
+    "coverage": "istanbul cover --dir ./test --report cobertura _mocha || exit 0"
   },
   "files": [
     "generators"
@@ -35,6 +37,7 @@
     "eslint": "3.15.0",
     "eslint-config-itp-base": "1.0.1",
     "eslint-plugin-import": "2.2.0",
+    "istanbul": "~0.4.5",
     "mocha": "~2.4.5"
   }
 }
