update sonar properties

--- a/generators/app/templates/_sonar-project.properties
+++ b/generators/app/templates/_sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectVersion=1.0
 # Comma-separated paths
 sonar.sources=.
 sonar.tests=test
-sonar.exclusions=node_modules/**/*, config/**/*, test/**/*, coverage/**/*
+sonar.exclusions=node_modules/**/*, config/**/*, test/**/*, coverage/**/*, public/**/*
 sonar.libraries=node_modules
 
 # Language
