--- a/generators/app/templates/docker/_docker.env
+++ b/generators/app/templates/docker/_docker.env
@@ -1,20 +1,14 @@
 # Application
-<% if (useMariaDB) { %>
-MYSQL_HOST=mariadb
+<% if (useMySQL) { %>MYSQL_HOST=mysql
 MYSQL_PORT=3306
 MYSQL_DB=docker
 MYSQL_USER=docker
-MYSQL_PASS=docker
-<% } %>
- 
-<% if (useMongoose) { %>
-MONGO_URI=mongodb://mongo/docker
-<% } %>
+MYSQL_PASS=docker<% } %>
+
+<% if (useMongoose) { %>MONGO_URI=mongodb://mongo/docker<% } %>
 
 # Docker
-<% if (useMariaDB) { %>
-MYSQL_RANDOM_ROOT_PASSWORD=yes
+<% if (useMySQL) { %>MYSQL_RANDOM_ROOT_PASSWORD=yes
 MYSQL_DATABASE=docker
 MYSQL_USER=docker
-MYSQL_PASSWORD=docker
-<% } %>
+MYSQL_PASSWORD=docker<% } %>
